--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  background-color: #ff8b76;
+  background-color: #f0fff8;
   font-family: "Poppins", sans-serif;
   
 ;
@@ -15,11 +15,11 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #68b0f3;
+  background-color: hsl(193, 88%, 77%);
   padding: 20px 50px 20px 50px;
   margin: 5px;
   border-radius: 20px;
-  box-shadow: 0 8px 8px 0 rgb(97, 97, 97, 0.2), 0 6px 20px 0;
+  /*box-shadow: 0 8px 8px 0 rgb(97, 97, 97, 0.2), 0 6px 20px 0;*/
 }
 .imgAvatar{
   display: flex;
