--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');*/
 
 html {
   height: 100%;
@@ -11,20 +11,19 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-#qm-sou-eu {
+#qmSouEu {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.persContainer{
+.persInfo{
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: hsl(193, 88%, 77%);
   padding: 20px 50px 20px 50px;
-  margin: 5px;
   border-radius: 20px;
   border: 2px solid hsl(193, 88%, 65%)
 }
