--- a/style.css
+++ b/style.css
@@ -34,3 +34,14 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 600px) {
+  .persInfo{
+    flex-direction: column;
+    padding: 20px 20px 20px 20px;
+  }
+  
+  .imgAvatar{
+    height: 
+  }
+}
